Fixed usage of deprecated APIs